# file-watchdog

./: .gitignore  README.md  file-watchdog.py  pyproject.toml  requirements.txt  watchdog.py
src/file_watchdog/: cli.py
