[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-watchdog"
version = "0.1.0"
description = "File system watchdog wrapper. Monitors a directory and logs events."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tim Abdiukov" }]
license = { file = "LICENCE" }
keywords = ["watchdog", "filesystem", "monitoring", "cli", "automation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Filesystems",
]

dependencies = [
  "watchdog>=4.0.2",
]

[project.urls]
Repository = "https://github.com/TAbdiukov/file-watchdog"

[project.scripts]
# This creates the command: file-watchdog ...
file-watchdog = "file_watchdog.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
