[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-watchdog"
dynamic = ["version"]
description = "File system watchdog wrapper. Monitors a directory and logs events."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tim Abdiukov", email = "TAbdiukov@gmail.com" }]
keywords = ["watchdog", "filesystem", "monitoring", "cli", "automation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Filesystems",
  "Topic :: Utilities",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
]

dependencies = [
  "watchdog>=4.0.2",
]

[project.urls]
Homepage\ = "https://github.com/TAbdiukov/file-watchdog"
Issues = "https://github.com/TAbdiukov/file-watchdog/issues"

[project.scripts]
# This creates the command: file-watchdog ...
file-watchdog = "file_watchdog.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "file_watchdog.__version__" }
